--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>De Digitale Wichelroede</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> 
-  <link rel="stylesheet" type="text/css" href="home/css/config.css">
+  <link rel="stylesheet" type="text/css" href="css/home.css">
 
 </head>
 	<script type="text/javascript" src="lib/gt/DHTML.js"></script>
@@ -66,7 +66,8 @@
 					document.getElementById('butmaakroute').style.display = "block";
 					document.getElementById('butmijnpagina').style.display = "block";
 					DH.hide('loginform');
-					DH.show('logoutform');
+					toonlogoutbutton();
+//					DH.show('logoutform');
 				} else if (elm.tagName == 'logout-rsp') {
 					TST.pr('logout OK');
 					document.getElementById('butmaakroute').style.display = "none";
@@ -181,6 +182,19 @@ function verbergInlogBox() {
 	document.getElementById('inlogbox').style.display = "none";
 	document.getElementById('inlogform').style.display = "none";
 }
+
+function toonlogoutbutton() {
+	document.getElementById('butuitloggen').style.display = "block";
+	document.getElementById('butinloggen').style.display = "none";
+}
+
+function toonloginbutton() {
+	TST.logout();
+	document.getElementById('butuitloggen').style.display = "none";
+	document.getElementById('butinloggen').style.display = "block";
+
+}
+
 function HideText(d) {
 if(d.length < 1) { return; }
 	document.getElementById(texten[d]).style.display = "none";
@@ -213,18 +227,22 @@ function show(d){
 <div id="rechterkolom">
 	<div id="bovenbutlijn"> <img  src="home/images/bovenbuttons.gif" border="0"> </div>
 
-	<div id="butinloggen">
+	<div id="butinloggen" style="display:block">
 		<a><img id="5" src="home/buttons/inloggen.gif" onMouseOver="src='home/buttons/inloggenH.gif'"
 		onMouseOut="src='home/buttons/inloggen.gif'" onClick="toonInlogBox()" border="0"></a>
+	</div>
+	<div id="butuitloggen" style="display:none">
+		<a><img id="8" src="home/buttons/uitloggen.gif" onMouseOver="src='home/buttons/uitloggenH.gif'"
+		onMouseOut="src='home/buttons/uitloggen.gif'" onClick="toonloginbutton()" border="0"></a>
 	</div>
 	
 	<div id="butmaakroute" style="display:none;">
 		<a><img id="6" src="home/buttons/maakroute.gif"onMouseOver="src='home/buttons/maakrouteH.gif'"
-		onMouseOut="src='home/buttons/maakroute.gif'" onClick="" border="0"></a>
+		onMouseOut="src='home/buttons/maakroute.gif'" onClick="location.href='mypage/mypage.html?mp=false'" border="0"></a>
 	</div>
 	<div id="butmijnpagina" style="display:none;">
 		<a><img id="7" src="home/buttons/mijnpagina.gif"onMouseOver="src='home/buttons/mijnpaginaH.gif'"
-		onMouseOut="src='home/buttons/mijnpagina.gif'" onClick="location.href='mypage/mypage.html'" border="0"></a>
+		onMouseOut="src='home/buttons/mijnpagina.gif'" onClick="location.href='mypage/mypage.html?mp=true'" border="0"></a>
 	</div>
 	<div id="onderbutlijn"> <img  src="home/images/onderbuttons2.gif" border="0"> </div>
 	<div id="inlogbox" style="display:none;"> <img src="home/images/videobox.gif" border="0"> </div>
