--- a/app/diwi/trunk/client/web/mypage/mypage.html
+++ b/app/diwi/trunk/client/web/mypage/mypage.html
@@ -471,7 +471,7 @@ function beginpagina() {
 		<input class="slider-input" id="s1input"/>
 	</div>
 	<div class="slidertext" id="besloten">
-		 <input  id="s1value" value="0" onChange="s1.setValue(parseInt(this.value))" />
+		 <input  id="s1value" value="0" onChange="s1.setValue(parseInt(this.value))" />%
 	</div>
 
 	<div  class="slidercaption" id="caption2">
@@ -481,7 +481,7 @@ function beginpagina() {
 		<input class="slider-input" id="s2input"/>
 	</div>
 	<div class="slidertext" id="halfopen">
-		 <input id="s2value" value="0" onChange="s2.setValue(parseInt(this.value))" />
+		 <input id="s2value" value="0" onChange="s2.setValue(parseInt(this.value))" />%
 	</div>
 	
 	<div  class="slidercaption" id="caption3">
@@ -491,7 +491,7 @@ function beginpagina() {
 		<input class="slider-input" id="s3input"/>
 	</div>
 	<div  class="slidertext" id="open">
-		 <input id="s3value" value="0" onChange="s3.setValue(parseInt(this.value))" />
+		 <input id="s3value" value="0" onChange="s3.setValue(parseInt(this.value))" />%
 	</div>
 
 	<div  class="slidercaption" id="caption4">
@@ -501,7 +501,7 @@ function beginpagina() {
 		<input class="slider-input" id="s4input"/>
 	</div>
 	<div  class="slidertext" id="bedrijven">
-		 <input id="s4value" value="0" onChange="s4.setValue(parseInt(this.value))" />
+		 <input id="s4value" value="0" onChange="s4.setValue(parseInt(this.value))" />%
 	</div>
 	
 	<div  class="slidercaption" id="caption5">
@@ -511,7 +511,7 @@ function beginpagina() {
 		<input class="slider-input" id="s5input"/>
 	</div>
 	<div class="slidertext" id="bewoning">
-		 <input id="s5value" value="0" onChange="s5.setValue(parseInt(this.value))" />
+		 <input id="s5value" value="0" onChange="s5.setValue(parseInt(this.value))" />%
 	</div>
 
 	<div  class="slidercaption" id="caption6">
@@ -521,7 +521,7 @@ function beginpagina() {
 		<input class="slider-input" id="s6input"/>
 	</div>
 	<div class="slidertext"  id="bos">
-		 <input id="s6value" value="0" onChange="s6.setValue(parseInt(this.value))" />
+		 <input id="s6value" value="0" onChange="s6.setValue(parseInt(this.value))" />%
 	</div>
 	
 	<div  class="slidercaption" id="caption7">
@@ -531,7 +531,7 @@ function beginpagina() {
 		<input class="slider-input" id="s7input"/>
 	</div>
 	<div class="slidertext"  id="heide">
-		 <input id="s7value"  value="0" onChange="s7.setValue(parseInt(this.value))" />
+		 <input id="s7value"  value="0" onChange="s7.setValue(parseInt(this.value))" />%
 	</div>
 
 	<div  class="slidercaption" id="caption8">
@@ -541,7 +541,7 @@ function beginpagina() {
 		<input class="slider-input" id="s8input"/>
 	</div>
 	<div class="slidertext"  id="grasland">
-		 <input id="s8value"  value="0" onChange="s8.setValue(parseInt(this.value))" />
+		 <input id="s8value"  value="0" onChange="s8.setValue(parseInt(this.value))" />%
 	</div>
 
 	<div  class="slidercaption" id="caption9">
@@ -551,7 +551,7 @@ function beginpagina() {
 		<input class="slider-input" id="s9input"/>
 	</div>
 	<div class="slidertext"  id="zee">
-		 <input id="s9value"  value="0" onChange="s9.setValue(parseInt(this.value))" />
+		 <input id="s9value"  value="0" onChange="s9.setValue(parseInt(this.value))" />%
 	</div>
 
 	<div  class="slidercaption" id="caption10">
@@ -561,7 +561,7 @@ function beginpagina() {
 		<input class="slider-input" id="s10input"/>
 	</div>
 	<div class="slidertext"  id="sloten">
-		 <input id="s10value"  value="0" onChange="s10.setValue(parseInt(this.value))" />
+		 <input id="s10value"  value="0" onChange="s10.setValue(parseInt(this.value))" />%
 	</div>
 	
 	<div id="butmaakeigenroute">
