--- a/app/diwi/trunk/client/web/test/kwclient-diwi.html
+++ b/app/diwi/trunk/client/web/test/kwclient-diwi.html
@@ -104,7 +104,7 @@
 					return;
 				}
 
-				TST.pr('<a href="' + unescape(elm.getAttribute('url')) + '">show image</a>');
+				TST.pr('<img src="' + unescape(elm.getAttribute('url')) + '"/>');
 			},
 
 			onRsp: function(elm) {
