Support all CMS services and KICH services with javascript test page.

--- a/app/diwi/trunk/client/web/test/index.html
+++ b/app/diwi/trunk/client/web/test/index.html
@@ -28,7 +28,10 @@ Several tests/try outs for DIWI web client.
 		<td><a href="kwclient-diwi.html">kwclient-diwi.html</a></td>
 		<td>Test KWClientDIWI calls</td>
 	</tr>
-</table>
+	<tr>
+		<td><a href="kwclient-cms.html">kwclient-cms.html</a></td>
+		<td>Test KWClientCMS calls</td>
+	</tr></table>
 </body>
 
 </html>
