--- a/app/diwi/trunk/client/web/test/kwclient-diwi.html
+++ b/app/diwi/trunk/client/web/test/kwclient-diwi.html
@@ -173,21 +173,6 @@
 </form>
 
 <form>
-	<h2>Get Themes</h2>
-	<input type="button" name="button" value="Get Themes" onClick="TST.getThemes(this.form)"/>	
-</form>
-
-<form>
-	<h2>Get Start Points</h2>
-	<input type="button" name="button" value="Get Start Points" onClick="TST.getStartPoints(this.form)"/>	
-</form>
-
-<form>
-	<h2>Get End Points</h2>
-	<input type="button" name="button" value="Get End Points" onClick="TST.getEndPoints(this.form)"/>	
-</form>
-
-<form>
 	<h2>Get Route</h2>
 	<b>ID:</b> <input type="text" name="id" value=""/><br/>
 	<input type="button" name="button" value="Get Route" onClick="TST.getRoute(this.form)"/>		
@@ -211,7 +196,7 @@
 </div>
 
 
-<div id="result" style="height: 200px; overflow:  scroll"><b>DEBUG INFO</b></div>
+<div id="result"><b>DEBUG INFO</b></div>
 
 
 
