added a traffic controller

--- a/app/diwi/trunk/client/web/test/kwclient-diwi.html
+++ b/app/diwi/trunk/client/web/test/kwclient-diwi.html
@@ -210,10 +210,7 @@
 
 <form>
 	<h2>Get Generated Route</h2>
-    <table>
-	<tr><td><b>PERSONID:</b> </td><td><input type="text" name="personid" value=""/></td></tr>
-	<tr><td><input type="button" name="button" value="Get Generated Route" onClick="TST.getGeneratedARoute(this.form)"/></td></tr>
-	</table>
+    <input type="button" name="button" value="Get Generated Route" onClick="TST.getGeneratedARoute(this.form)"/>
 </form>
 </div>
 
