jgps: small changes editorial

--- a/app/jgps/trunk/server/webapp/static-layout-footer.html
+++ b/app/jgps/trunk/server/webapp/static-layout-footer.html
@@ -1,6 +1,6 @@
 <tr>
 	<td>&nbsp;</td>
-	<td colspan="4" valign="top" bgcolor="#000000" class="borderboven"><div align="right"><span class="sitewide">&copy;Sense of Brainport 2006</span>
+	<td colspan="4" valign="top" bgcolor="#000000" class="borderboven"><div align="right"><span class="sitewide">&copy;Jeugd GePoSitioneerd 2007</span>
 	</div></td>
 </tr>
 </table>
