--- a/app/jgps/trunk/server/webapp/static-layout-header.html
+++ b/app/jgps/trunk/server/webapp/static-layout-header.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-	<title>sense of brainport</title>
+	<title>Jeugd GePoSitioneerd</title>
 	<link href="css/brainport.css" rel="stylesheet" type="text/css"/>
 	<script type="text/javascript" src="lib/DHTML.js"></script>
 </head>
@@ -11,7 +11,7 @@
 <table width="900" border="0" cellspacing="0" cellpadding="0">
 <tr>
 	<td width="170" rowspan="4">&nbsp;</td>
-	<td colspan="2" class="logoteksthome">sense of brainport</td>
+	<td colspan="2" class="logoteksthome">Jeugd GePoSitioneerd</td>
 	<td colspan="2">&nbsp;</td>
 </tr>
 <tr>
@@ -22,7 +22,7 @@
 						 class="imagekaderlichtgrijs"/></td>
 	<td width="320">
 <!--		<div class="navtekst"><a href="http://www.senseofthecity.nl">sense of the city</a></div>  -->
-		<div class="navtekst"><a href="sense.jsp">sense of brainport </a></div>
+		<div class="navtekst"><a href="sense.jsp">Jeugd GePoSitioneerd</a></div>
 		<div class="navtekst"><a href="deelnemers.jsp">deelnemers</a></div>
 		<div class="navtekst"><a href="map.jsp">routes</a></div>
 		<div class="navtekst"><a href="map.jsp?cmd=live">live</a></div>
