Make POI Functionality work

--- a/app/diwi/trunk/client/web/test/kwclient-cms.html
+++ b/app/diwi/trunk/client/web/test/kwclient-cms.html
@@ -63,6 +63,7 @@
 				poi.name = form.name.value; 
 				poi.description = form.description.value;
 				poi.category = form.category.value;
+				poi.type = form.type.value;
 				poi.x = form.x.value;
 				poi.y = form.y.value;
 				poi.kichuri1 = form.kichuri1.value;
@@ -78,6 +79,7 @@
 				poi.name = form.name.value; 
 				poi.description = form.description.value;
 				poi.category = form.category.value;
+				poi.type = form.type.value;
 				poi.x = form.x.value;
 				poi.y = form.y.value;
 				poi.kichuri1 = form.kichuri1.value;
@@ -167,9 +169,10 @@
 <form>
 	<h2>Insert/Update POI</h2>
 	<table>
-	<tr><td><b>ID:</b> </td><td><input type="text" name="ID" value=""/></td></tr>
+	<tr><td><b>ID:</b> </td><td><input type="text" name="id" value=""/></td></tr>
 	<tr><td><b>name:</b> </td><td><input type="text" name="name" value=""/></td></tr>
 	<tr><td><b>description:</b> </td><td><input type="text" name="description" value=""/></td></tr>
+	<tr><td><b>type:</b> </td><td><input type="text" name="type" value=""/></td></tr>
 	<tr><td><b>category:</b> </td><td><input type="text" name="category" value=""/></td></tr>
 	<tr><td><b>x:</b> </td><td><input type="text" name="x" value=""/></td></tr>
 	<tr><td><b>y:</b> </td><td><input type="text" name="y" value=""/></td></tr>
